--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,6 +7,14 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_call:
+  inputs:
+    config-path:
+      required: true
+      type: string
+  secrets:
+    personal_access_token:
+      required: true
 
 jobs:
   lint-format:
