--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -7,6 +7,8 @@ jobs:
   ssh-debug:
     runs-on: ubuntu-latest
     steps:
+    - uses: ./github/workflows/CI.yml
+
     - uses: actions/checkout@v2
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
