--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: ./github/workflows/CI.yml
+    - uses: ./.github/workflows/CI.yml
 
     - name: Setup upterm session
       uses: lhotari/action-upterm@v1
