--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,5 +50,5 @@ if(kamayan_ENABLE_TESTING)
   add_executable(kamayan_test tests/gtest_main.cpp)
   target_link_libraries(kamayan_test PRIVATE kamayan_test_lib kamayan)
   include(GoogleTest)
-  gtest_discover_tests(kamayan_test)
+  gtest_discover_tests(kamayan_test PROPERTIES LABELS "unit")
 endif()
