some unit tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,8 @@ set(_test_sources
     kamayan/tests/test_config.cpp
     kamayan/tests/test_runtime_parameters.cpp
     kamayan/tests/test_unit_collection.cpp
-    physics/eos/tests/test_eos.cpp)
+    physics/eos/tests/test_eos.cpp
+    physics/hydro/tests/test_reconstruction.cpp)
 
 target_link_libraries(kamayan PUBLIC parthenon singularity-eos::singularity-eos)
 target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
