--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,13 +37,13 @@ jobs:
       id: python-setup
       run: uv python install
 
-    - name: Lint
+    - name: Lint C++
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
       run: |
         uv run cpplint --counting=detailed --recursive src
 
-    - name: Format
+    - name: Format C++
       if: success() || steps.python-setup.outcome == 'success'
       working-directory: ${{ github.workspace }}
       run: ls src/**/*.[ch]pp | xargs uv run clang-format -Werror --dry-run --verbose
@@ -55,7 +55,17 @@ jobs:
         find ./CMakeLists.txt src docs -type f -name "CMakeLists.txt" | xargs uv run cmake-format --check
         uv run cmake-format --check CMakeLists.txt
 
-  build-unit-test:
+    - name: Lint Python
+      if: success() || steps.python-setup.outcome == 'success'
+      working-directory: ${{ github.workspace }}
+      run: uv run ruff check
+
+    - name: Format Python
+      if: success() || steps.python-setup.outcome == 'success'
+      working-directory: ${{ github.workspace }}
+      run: uv run ruff format --check
+
+  build-unit-regression-test:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -112,6 +122,11 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
+    - name: Setup MPI
+      uses: mpi4py/setup-mpi@v1
+      with:
+        mpi: openmpi
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -121,7 +136,6 @@ jobs:
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DPARTHENON_DISABLE_HDF5=ON
-        -DPARTHENON_DISABLE_MPI=ON
         -DPARTHENON_DISABLE_EXAMPLES=ON
         -DPARTHENON_ENABLE_TESTING=OFF
         -S ${{ github.workspace }}
@@ -130,10 +144,12 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --config ${{ matrix.build_type }}
 
-    - name: Test
+    - name: Unit Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      # Execute tests defined by the CMake configuration. Note that --build-config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest --build-config ${{ matrix.build_type }}
+      run: ctest -L unit
+
+    - name: Regression Test
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      run: ctest -L regression
 
 
