--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,7 +28,8 @@ set(_test_sources
     kamayan/tests/test_config.cpp
     kamayan/tests/test_runtime_parameters.cpp
     kamayan/tests/test_unit_collection.cpp
-    physics/eos/tests/test_eos.cpp)
+    physics/eos/tests/test_eos.cpp
+    physics/hydro/tests/test_reconstruction.cpp)
 
 target_link_libraries(kamayan PUBLIC parthenon singularity-eos::singularity-eos)
 target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
@@ -50,5 +51,5 @@ if(kamayan_ENABLE_TESTING)
   add_executable(kamayan_test tests/gtest_main.cpp)
   target_link_libraries(kamayan_test PRIVATE kamayan_test_lib kamayan)
   include(GoogleTest)
-  gtest_discover_tests(kamayan_test)
+  gtest_discover_tests(kamayan_test PROPERTIES LABELS "unit")
 endif()
