--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   changes:
-    if: {{github.event_name == 'pull_request'}}
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     # Required permissions
     permissions:
