I hate this syntax

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -86,7 +86,7 @@ jobs:
 
   build-unit-regression-test:
     needs: changes
-    if: ${{ needs.changes.outputs.src == 'true' }} || github.event_name != 'pull_request'
+    if: ${{ needs.changes.outputs.src == 'true'  || github.event_name != 'pull_request' }}
     runs-on: ${{ matrix.os }}
 
     strategy:
