--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
+        lfs: 'true'
+
+    - name: checkoutLFS
+      uses: actions/checkout@v2
+    - run: git lfs pull
 
     - name: Set github reference as Slug environment variable
       run: |
