trigger CI on changes to CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,6 +32,7 @@ jobs:
           src:
             - 'src/**'
             - 'CMakeLists.txt'
+            - '.github/workflows/CI.yml'
 
   lint-format:
     runs-on: ${{ matrix.os }}
