status check job

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -179,3 +179,16 @@ jobs:
       run: ctest -L regression
 
 
+    ci-status-check:
+    # Always run this job!
+    if: always()
+    needs:
+      # Require every other job in this workflow
+      - build-unit-regression-test
+      - lint-format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
+
