--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Build and Publish Documentation
 
 on:
   pull_request:
-    types: [opened, closed]
+    types: [opened, closed, synchronize]
   workflow_dispatch:
   push:
     branches:
