--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Build and Publish Documentation
 
 on:
   pull_request:
-    types: [opened, closed]
+    types: [opened, closed, synchronize]
   workflow_dispatch:
   push:
     branches:
@@ -123,7 +123,7 @@ jobs:
 
   cleanup:
     needs: build-deploy
-    if : ${{ github.event.pull_request.closed == 'true' }}
+    if : ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}
     runs-on: ubuntu-latest
     steps:
     - name: Set github reference as Slug environment variable
