this check will work

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,7 @@ jobs:
     steps:
     # For pull requests it's not necessary to checkout the code
     - uses: dorny/paths-filter@v3
+      if: ${{ github.even_name == 'pull_request' }}
       id: filter
       with:
         filters: |
