--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -132,8 +132,7 @@ jobs:
 
     - uses: actions/checkout@v4
       with:
-        submodules: recursive
-        fetch-depth: 0
+        ref: 'gh-pages'
 
     - name: Install uv
       uses: astral-sh/setup-uv@v5
