add mhd blast problem

--- a/src/problems/CMakeLists.txt
+++ b/src/problems/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_problem(isentropic_vortex.cpp isentropic_vortex)
 # --8<-- [end:add]
 add_problem(sedov.cpp sedov)
+add_problem(mhd_blast.cpp mhd_blast)
