--- a/src/problems/CMakeLists.txt
+++ b/src/problems/CMakeLists.txt
@@ -1,3 +1,5 @@
 # --8<-- [start:add]
 add_problem(isentropic_vortex.cpp isentropic_vortex)
 # --8<-- [end:add]
+add_problem(sedov.cpp sedov)
+add_problem(mhd_blast.cpp mhd_blast)
