--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name="kamayan"
 version="0.1.0"
 requires-python = ">= 3.10"
 dependencies = [
+   "click>=8.2.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
 # build
