--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,25 +6,29 @@ dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
-# build
+   # build
    "cmake>=4.0.0",
    "compdb>=0.2.0",
-# format & linting
+   # format & linting
    "clang-format>=20.1.0",
    "cmakelang>=0.6.13",
    "cpplint>=2.0.0",
    "ruff>=0.11.7",
-# mkdocs and documentation
+   # mkdocs and documentation
    "markdown-include>=0.8.1",
    "markdown-katex>=202406.1035",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "pymdown-extensions>=10.14.3",
+   "parthenon_tools",
 ]
 
 [tool.uv]
 package = true
+
+[tool.uv.sources]
+parthenon-tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}
 
 [tool.setuptools]
 packages = ["kamayan"]
