--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,10 +57,10 @@ setup_test(
   4
   "mhd_blast"
   "--driver ${PROJECT_BINARY_DIR}/mhd_blast --driver_input ${PROJECT_SOURCE_DIR}/src/problems/mhd_blast.in --num_steps 2"
-  "mhd_blast")
+  "mhd_blast;baseline")
 
 setup_test(
   4
   "sedov"
   "--driver ${PROJECT_BINARY_DIR}/sedov --driver_input ${PROJECT_SOURCE_DIR}/src/problems/sedov.in --num_steps 2"
-  "sedov")
+  "sedov;baseline")
