--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -147,6 +147,8 @@ jobs:
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
+      # this is completely useless when running in a container since ${{ github.workspace }} doesn't point to the right place...
+      # https://github.com/actions/runner/issues/2058
       id: strings
       shell: bash
       run: |
@@ -155,26 +157,38 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      # broken for reason stated above related to github.workspace
+      # run: >
+      #   cmake -B ${{ steps.strings.outputs.build-output-dir }}
+      #   -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+      #   -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+      #   -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #   -Dkamayan_ENABLE_TESTING=ON
+      #   -DPARTHENON_DISABLE_EXAMPLES=ON
+      #   -DPARTHENON_ENABLE_TESTING=OFF
+      #   -S ${{ github.workspace }}
       run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        cmake -B build 
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -Dkamayan_ENABLE_TESTING=ON
         -DPARTHENON_DISABLE_EXAMPLES=ON
         -DPARTHENON_ENABLE_TESTING=OFF
-        -S ${{ github.workspace }}
+      working-directory: ${{github.workspace}}
+
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --config ${{ matrix.build_type }}
+      run: cmake --build build -j4 --config ${{ matrix.build_type }}
+      working-directory: ${{github.workspace}}
 
     - name: Unit Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      working-directory: ${{github.workspace}}/build
       run: ctest -L unit --output-on-failure
 
     - name: Regression Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      working-directory: ${{github.workspace}}/build
       run: ctest -L regression --output-on-failure
 
 
