--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -154,6 +154,12 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
+    - name: set openmpi env variables for root
+      # ONLY DO THIS IN THE CI DOCKER CONTAINER
+      run: |
+        echo "OMPI_ALLOW_RUN_AS_ROOT=1" >> "$GITHUB_ENV";
+        echo "OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1" >> "$GITHUB_ENV"
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
