--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install uv
       uses: astral-sh/setup-uv@v5
@@ -93,6 +95,8 @@ jobs:
     needs: changes
     if: ${{ needs.changes.outputs.src == 'true'  || github.event_name != 'pull_request' }}
     runs-on: ${{ matrix.os }}
+    container:
+      image: acreyes/kamayan:v1
 
     strategy:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
@@ -143,40 +147,56 @@ jobs:
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
+      # this is completely useless when running in a container since ${{ github.workspace }} doesn't point to the right place...
+      # https://github.com/actions/runner/issues/2058
       id: strings
       shell: bash
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-    - name: Setup MPI
-      uses: mpi4py/setup-mpi@v1
-      with:
-        mpi: openmpi
+    - name: set openmpi env variables for root
+      # ONLY DO THIS IN THE CI DOCKER CONTAINER
+      run: |
+        echo "OMPI_ALLOW_RUN_AS_ROOT=1" >> "$GITHUB_ENV";
+        echo "OMPI_ALLOW_RUN_AS_ROOT_CONFIRM=1" >> "$GITHUB_ENV"
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      # broken for reason stated above related to github.workspace
+      # run: >
+      #   cmake -B ${{ steps.strings.outputs.build-output-dir }}
+      #   -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+      #   -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+      #   -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+      #   -Dkamayan_ENABLE_TESTING=ON
+      #   -DPARTHENON_DISABLE_EXAMPLES=ON
+      #   -DPARTHENON_ENABLE_TESTING=OFF
+      #   -S ${{ github.workspace }}
       run: >
-        cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        cmake -B build 
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DPARTHENON_DISABLE_HDF5=ON
+        -Dkamayan_ENABLE_TESTING=ON
+        -Dkamayan_NP_TESTING=2
         -DPARTHENON_DISABLE_EXAMPLES=ON
         -DPARTHENON_ENABLE_TESTING=OFF
-        -S ${{ github.workspace }}
+      working-directory: ${{github.workspace}}
+
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} -j4 --config ${{ matrix.build_type }}
+      run: cmake --build build -j4 --config ${{ matrix.build_type }}
+      working-directory: ${{github.workspace}}
 
     - name: Unit Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      run: ctest -L unit
+      working-directory: ${{github.workspace}}/build
+      run: ctest -L unit --output-on-failure
 
     - name: Regression Test
-      working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      run: ctest -L regression
+      working-directory: ${{github.workspace}}/build
+      run: ctest -L regression --output-on-failure
 
 
   ci-status-check:
