--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -130,6 +130,8 @@ jobs:
         echo "Slug=$(echo "${{ github.head_ref }}" | sed "s/\//\-/g")" >> "$GITHUB_ENV"
 
     - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install uv
       uses: astral-sh/setup-uv@v5
