most of loehner

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(_sources
     driver/kamayan_driver.cpp
     grid/grid.cpp
+    grid/grid_refinement.cpp
     kamayan/config.cpp
     kamayan/kamayan.cpp
     kamayan/runtime_parameters.cpp
