add debug capability

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,11 @@ set(_test_sources
 target_link_libraries(kamayan PUBLIC parthenon singularity-eos::singularity-eos)
 target_include_directories(kamayan PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+option(kamayan_DEBUG_SCRATCH "Enable separate fields for each scratch variable")
+if(kamayan_DEBUG_SCRATCH)
+   add_compile_definitions(KAMAYAN_DEBUG_SCRATCH)
+endif()
+
 function(ADD_PROBLEM main problem_exe)
   add_executable(${problem_exe} ${main})
   target_link_libraries(${problem_exe} PRIVATE kamayan)
