--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 	path = external/singularity-eos
 	url = https://github.com/lanl/singularity-eos.git
    ignore = dirty
+[submodule "external/pybind11"]
+	path = external/pybind11
+	url = https://github.com/pybind/pybind11.git
