python bindings are all basically working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,9 @@ add_library(kamayan OBJECT ${_sources})
 # target_sources(kamayan OBJECT ${_sources})
 
 set(_pybind_sources
-    kamayan/pybind/kamayan_py11.cpp)
+    grid/pybind/grid_py11.cpp
+    kamayan/pybind/kamayan_py11.cpp
+    kamayan/pybind/kamayan_manager_py.cpp)
 
 # maybe I should just glob for tests...
 set(_test_sources
