--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -110,7 +110,7 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest]
-        build_type: [Release]
+        build_type: [Release, Debug]
         c_compiler: [gcc, clang]
         include:
           - os: ubuntu-latest
