Add python bindings (#28)
introduce some core python bindings to kamayan/parthenon. Added a python
version of sedov that demonstrates how all these things can be used.

TODO:
* docs
* testing

future todo: 
* switch to nanobind. Should be 1to1 with how pybind is being used but
can make use of the `ndarray` which should also be useful for device
data
* some nicer wrappers around all the `main` function things that need to
be done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(kamayan)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # If the user doesn't specify a build type, prefer Release
 set(DEFAULT_BUILD_TYPE "Release")
@@ -45,6 +46,12 @@ set(PARTHENON_DISABLE_SPARSE
     ON
     CACHE BOOL "Disable sparse (not used in kamayan yet)")
 
+set(PYBIND11_FINDPYTHON ON)
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/external/pybind11/CMakeLists.txt)
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/pybind11 pybind11)
+else()
+  find_package(pybind11 REQUIRED)
+endif()
 # TODO(acreyes): maybe a cmake utility for doing this if we keep adding more...
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/external/parthenon/CMakeLists.txt)
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/parthenon parthenon)
