--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -110,7 +110,7 @@ jobs:
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
         os: [ubuntu-latest]
-        build_type: [Release]
+        build_type: [RelWithDebInfo, Debug]
         c_compiler: [gcc, clang]
         include:
           - os: ubuntu-latest
@@ -174,7 +174,7 @@ jobs:
       #   -DPARTHENON_ENABLE_TESTING=OFF
       #   -S ${{ github.workspace }}
       run: >
-        cmake -B build 
+        uv run cmake -B build 
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
@@ -195,8 +195,20 @@ jobs:
       run: ctest -L unit --output-on-failure
 
     - name: Regression Test
+      if: ${{ matrix.build_type != 'Debug' }}
       working-directory: ${{github.workspace}}/build
       run: ctest -L regression --output-on-failure
+
+    - name: Python Tests
+      working-directory: ${{github.workspace}}
+      run: uv run pytest -v kamayan
+
+    # TODO(acreyes): some real testing framework for python
+    # this probably needs some more work around making the python
+    # problem setup more ergonomic
+    - name: pyKamayan runs
+      working-directory: ${{github.workspace}}
+      run: uv run mpirun -np 2 python src/problems/sedov.py parthenon/time/nlim=100
 
 
   ci-status-check:
