--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,10 @@
 build*
 site
 docs/assets/generated/*
+*hdf*
+**/pyKamayan.cpython-313-darwin.so
 compile_commands.json
 __pycache__
+**/.*
+!.git*
+!.clang-format
