typing all worked out

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ site
 docs/assets/generated/*
 *hdf*
 **/pyKamayan.cpython-313-darwin.so
+kamayan/pyKamayan
 compile_commands.json
 __pycache__
 **/.*
