--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,29 +46,13 @@ target_link_libraries(pyKamayan PRIVATE kamayan)
 set_target_properties(pyKamayan PROPERTIES LIBRARY_OUTPUT_DIRECTORY
                                            "${CMAKE_SOURCE_DIR}/kamayan")
 
-set(_pyKamayan_modules Options Grid)
-
-function(NB_STUB module prefix)
-  if(prefix)
-    set(PREFIX "${prefix}.")
-  endif()
-
-  nanobind_add_stub(
-    "${module}_stub"
-    MODULE
-    "${PREFIX}${module}"
-    OUTPUT
-    "${CMAKE_SOURCE_DIR}/kamayan/${module}.pyi"
-    PYTHON_PATH
-    $<TARGET_FILE_DIR:pyKamayan>
-    DEPENDS
-    pyKamayan)
-endfunction()
-
-nb_stub("pyKamayan" "")
-foreach(module IN LISTS _pyKamayan_modules)
-  nb_stub("${module}" "pyKamayan")
-endforeach()
+set(PACKAGE_DIR "${CMAKE_SOURCE_DIR}/kamayan/pyKamayan")
+add_custom_target(
+  GenerateStubs ALL
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  COMMAND uv run python ${CMAKE_SOURCE_DIR}/external/nanobind/src/stubgen.py -r
+          -m kamayan.pyKamayan -O ${PACKAGE_DIR} -M ${PACKAGE_DIR}/py.typed
+  DEPENDS pyKamayan)
 
 option(kamayan_DEBUG_SCRATCH "Enable separate fields for each scratch variable")
 if(kamayan_DEBUG_SCRATCH)
