--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -199,9 +199,9 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: ctest -L regression --output-on-failure
 
-    - name: Python Tests
-      working-directory: ${{github.workspace}}
-      run: uv run pytest -v kamayan
+    # - name: Python Tests
+    #   working-directory: ${{github.workspace}}
+    #   run: uv run pytest -v kamayan
 
     # TODO(acreyes): some real testing framework for python
     # this probably needs some more work around making the python
