--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
 package = true
 
 [tool.uv.sources]
-parthenon-tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}
+parthenon_tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}
 
 [tool.setuptools]
 packages = ["kamayan"]
@@ -69,8 +69,14 @@ exclude = [
     "venv",
 ]
 
+
+
 [tool.pyright]
-extraPaths = ["kamayan"]
+extraPaths = [
+   "kamayan", 
+   "external/parthenon/scripts/python/packages/parthenon_tools",
+   "external/parthenon/tst/regression" # this is only really because the parthenon test suite is kind wonky
+]
 
 
 
@@ -94,6 +100,9 @@ unfixable = []
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/test_suites/**/__init__.py" = ["D104"]
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
