--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,8 +18,9 @@ set(_sources
 add_library(kamayan OBJECT ${_sources})
 # target_sources(kamayan OBJECT ${_sources})
 
-set(_pybind_sources grid/pybind/grid_bindings.cpp kamayan/pybind/kamayan_bindings.cpp
-                    kamayan/pybind/kamayan_manager_py.cpp)
+set(_pybind_sources
+    grid/pybind/grid_bindings.cpp kamayan/pybind/kamayan_bindings.cpp
+    kamayan/pybind/kamayan_manager_py.cpp)
 
 # maybe I should just glob for tests...
 set(_test_sources
