--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
 package = true
 
 [tool.uv.sources]
-parthenon-tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}
+parthenon_tools = { path = "external/parthenon/scripts/python/packages/parthenon_tools" , editable=true}
 
 [tool.setuptools]
 packages = ["kamayan"]
@@ -69,6 +69,17 @@ exclude = [
     "venv",
 ]
 
+
+
+[tool.pyright]
+extraPaths = [
+   "kamayan", 
+   "external/parthenon/scripts/python/packages/parthenon_tools",
+   "external/parthenon/tst/regression" # this is only really because the parthenon test suite is kind wonky
+]
+
+
+
 # Same as Black.
 line-length = 88
 indent-width = 4
@@ -80,7 +91,7 @@ target-version = "py39"
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
-select = ["E4", "E7", "E9", "F"]
+select = ["D", "E4", "E7", "E9", "F"]
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
@@ -89,6 +100,9 @@ unfixable = []
 
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/test_suites/**/__init__.py" = ["D104"]
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
@@ -116,3 +130,6 @@ docstring-code-format = false
 # This only has an effect when the `docstring-code-format` setting is
 # enabled.
 docstring-code-line-length = "dynamic"
+
+[tool.ruff.lint.pydocstyle]
+convention = "google" # Enforce Google-style docstrings
