--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name="kamayan"
 version="0.1.0"
 requires-python = ">= 3.10"
 dependencies = [
-   "click>=8.2.1",
+   "typer>=0.12.0",
+   "rich>=13.0.0",
+   "requests>=2.32.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    # build
@@ -27,6 +29,9 @@ dependencies = [
    "mpi4py>=4.1.0",
    "pytest>=8.4.1",
 ]
+
+[project.scripts]
+baselines = "kamayan.testing.baselines:app"
 
 [tool.uv]
 package = true
